--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -1,4 +1,4 @@
-<?xml version="1.0" encoding="utf-8"?>
+<?xml version="1.0" encoding="utf-8" ?>
 <androidx.coordinatorlayout.widget.CoordinatorLayout
     xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
@@ -10,30 +10,22 @@
     <com.google.android.material.appbar.AppBarLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:fitsSystemWindows="true">
-
-        <com.google.android.material.appbar.MaterialToolbar
-            android:id="@+id/toolbar"
-            android:layout_width="match_parent"
-            app:layout_scrollFlags="scroll|enterAlways|snap"
-            android:layout_height="?attr/actionBarSize" />
-
-    </com.google.android.material.appbar.AppBarLayout>
+        android:fitsSystemWindows="true"/>
 
     <androidx.core.widget.NestedScrollView
-        android:id="@+id/nestedScrollView"
+        android:id="@+id/nestedScrollView3"
         android:layout_width="match_parent"
-        android:layout_height="670dp"
-        android:layout_marginBottom="100dp"
+        android:layout_height="match_parent"
         app:layout_behavior="@string/appbar_scrolling_view_behavior">
 
         <androidx.constraintlayout.widget.ConstraintLayout
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
+            android:layout_height="670dp"
+            android:layout_marginBottom="100dp"
             app:layout_behavior="@string/appbar_scrolling_view_behavior">
 
             <ImageView
-                android:id="@+id/image_guni"
+                android:id="@+id/img_guni"
                 android:layout_width="match_parent"
                 android:layout_height="100dp"
                 android:src="@drawable/guni_pink_logo"
@@ -42,98 +34,126 @@
                 app:layout_constraintTop_toTopOf="parent" />
 
             <com.google.android.material.card.MaterialCardView
-                android:id="@+id/materialCardView2"
-                android:layout_width="372dp"
-                android:layout_height="205dp"
-                android:layout_margin="20dp"
-                android:layout_marginHorizontal="20dp"
+                android:id="@+id/matertalcardview"
+                android:layout_width="380dp"
+                android:layout_height="265dp"
                 app:cardElevation="10dp"
+                android:elevation="5dp"
                 app:layout_constraintBottom_toBottomOf="parent"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toBottomOf="@+id/image_guni">
+                app:layout_constraintTop_toBottomOf="@id/img_guni">
 
                 <androidx.constraintlayout.widget.ConstraintLayout
+                    android:id="@+id/constraintLayout2"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
+                    app:flow_horizontalBias="0.5"
                     app:layout_constraintBottom_toBottomOf="parent"
                     app:layout_constraintEnd_toEndOf="parent"
-                    app:layout_constraintHorizontal_bias="0.5"
                     app:layout_constraintStart_toStartOf="parent"
-                    app:layout_constraintTop_toTopOf="parent"
-                    tools:layout_editor_absoluteY="102dp">
+                    app:layout_constraintTop_toBottomOf="@+id/img_guni">
 
-
-                    <!--                app:layout_constraintBottom_toBottomOf="parent"-->
-                    <!--                app:layout_constraintTop_toTopOf="@+id/materialCardView2"-->
-                    <!--                app:layout_constraintVertical_bias="0.0"-->
-                    <!--                tools:layout_editor_absoluteX="-66dp">-->
-
-                    <TextView
-                        android:id="@+id/textView"
-                        android:layout_width="match_parent"
-                        android:layout_height="wrap_content"
-                        android:layout_margin="20"
-                        android:padding=""
-                        android:paddingHorizontal="10dp"
-                        android:paddingVertical="10dp"
-                        android:text="Email"
-                        android:textSize="30dp"
-                        tools:layout_editor_absoluteX="20dp" />
-
-                    <Button
-
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:layout_marginHorizontal="150dp"
+                    <EditText
+                        android:elevation="1dp"
+                        android:id="@+id/edEmail"
+                        android:layout_width="350dp"
+                        android:layout_height="80dp"
+                        android:layout_margin="20dp"
                         android:padding="10dp"
-                        android:text="Login"
-                        app:layout_constraintBottom_toBottomOf="parent"
-                        tools:layout_editor_absoluteX="152dp" />
+                        android:text="E-mail"
+                        android:drawableRight="@drawable/ic_baseline_email_24"
+                        android:textColor="@color/cardview_dark_background"
+                        android:textSize="25dp"
+                        app:layout_constraintEnd_toEndOf="parent"
+                        app:layout_constraintStart_toStartOf="parent"
+                        app:layout_constraintTop_toTopOf="parent" />
 
-                    <!--                    app:layout_constraintBottom_toBottomOf="parent"-->
-                    <!--                    app:layout_constraintEnd_toEndOf="parent"-->
-                    <!--                    app:layout_constraintStart_toStartOf="parent"-->
-                    <!--                    app:layout_constraintTop_toBottomOf="@id/image_guni" />-->
+                    <EditText
+                        android:elevation="1"
+                        android:id="@+id/edPasseord"
+                        android:layout_width="350dp"
+                        android:layout_height="80dp"
+                        android:layout_margin="10dp"
+                        android:padding="10dp"
+                        android:text="Password"
+                        android:textColor="@color/cardview_dark_background"
+                        android:drawableRight="@drawable/ic_baseline_vpn_key_24"
+                        android:textSize="25dp"
+                        app:layout_constraintBottom_toBottomOf="parent"
+                        app:layout_constraintEnd_toEndOf="parent"
+                        app:layout_constraintStart_toEndOf="@id/edEmail"
+                        app:layout_constraintStart_toStartOf="parent"
+                        app:layout_constraintTop_toBottomOf="@+id/edEmail" />
+
+                    <androidx.core.widget.NestedScrollView
+                        android:layout_width="match_parent"
+                        android:layout_height="match_parent"
+                        app:layout_behavior="@string/appbar_scrolling_view_behavior"
+                        tools:layout_editor_absoluteX="0dp"
+                        tools:layout_editor_absoluteY="1dp">
+
+                        <androidx.constraintlayout.widget.ConstraintLayout
+                            android:layout_width="match_parent"
+                            android:layout_height="wrap_content"
+                            app:layout_behavior="@string/appbar_scrolling_view_behavior"></androidx.constraintlayout.widget.ConstraintLayout>
+                    </androidx.core.widget.NestedScrollView>
                 </androidx.constraintlayout.widget.ConstraintLayout>
 
                 <TextView
-                    android:layout_width="match_parent"
-                    android:layout_height="95dp"
-                    android:layout_margin="20"
-                    android:padding=""
-                    android:paddingHorizontal="10dp"
-                    android:paddingVertical="10dp"
-                    android:text="Email"
-                    android:textSize="30dp" />
+                    android:id="@+id/acc"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_marginLeft="180"
+                    android:layout_marginTop="200dp"
+                    android:text="Forgot Password?"
+                    android:textSize="20dp" />
 
             </com.google.android.material.card.MaterialCardView>
 
-
-            <!--                    <TextView-->
-            <!--                        android:layout_width="wrap_content"-->
-            <!--                        android:layout_height="wrap_content"-->
-            <!--                        android:text="Email"-->
-            <!--                        android:layout_margin="20dp"-->
-            <!--                        app:layout_constraintStart_toStartOf="parent"-->
-            <!--                        app:layout_constraintTop_toBottomOf="@id/email"-->
-            <!--                        app:layout_constraintEnd_toEndOf="parent"-->
-            <!--                        android:id="@+id/passwd"-->
-            <!--                        android:paddingHorizontal="50dp"-->
-            <!--                        android:paddingVertical="20dp"-->
-            <!--                        android:textAlignment="gravity">-->
-
-            <!--                    </TextView>-->
-
-            <!--                    <Button-->
-            <!--                        android:layout_width="wrap_content"-->
-            <!--                        android:layout_height="wrap_content"-->
-            <!--                        android:text="Login"-->
-            <!--                        app:layout_constraintEnd_toEndOf="parent"-->
-            <!--                        app:layout_constraintStart_toStartOf="parent"-->
-            <!--                        app:layout_constraintTop_toTopOf="parent" />-->
         </androidx.constraintlayout.widget.ConstraintLayout>
 
     </androidx.core.widget.NestedScrollView>
+
+    <com.google.android.material.appbar.MaterialToolbar
+        android:id="@+id/toolbar"
+        android:layout_width="match_parent"
+        android:layout_height="99dp"
+        app:layout_scrollFlags="scroll|enterAlways|snap" />
+
+    <Button
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginHorizontal="150dp"
+        android:padding="10dp"
+        android:text="Login"
+        app:layout_anchor="@+id/nestedScrollView3"
+        app:layout_anchorGravity="center"/>
+
+    <TextView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="Don't have an account?"
+        android:textSize="20dp"
+        android:id="@+id/acc"
+        android:layout_marginTop="440dp"
+        android:layout_marginLeft="20dp"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintTop_toTopOf="parent"/>
+
+    <TextView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="SIGN UP"
+        android:textSize="20dp"
+        android:id="@+id/acc"
+        android:textStyle="bold"
+        android:textColor="#DB3D91"
+        android:layout_marginTop="440dp"
+        android:layout_marginLeft="250dp"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintTop_toTopOf="parent"/>
 
 </androidx.coordinatorlayout.widget.CoordinatorLayout>
