--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -124,11 +124,12 @@
 
     <Button
         android:id="@+id/button"
-        android:layout_width="wrap_content"
+        android:layout_width="130"
         android:layout_height="wrap_content"
-        android:layout_marginHorizontal="150dp"
+        android:layout_marginLeft="140dp"
         android:padding="10dp"
         android:text="Login"
+        android:textSize="17"
         app:layout_anchor="@+id/nestedScrollView3"
         app:layout_anchorGravity="center" />
 
