--- a/app/src/main/res/layout/activity_registration.xml
+++ b/app/src/main/res/layout/activity_registration.xml
@@ -52,7 +52,8 @@
                     <EditText
                         android:layout_width="350dp"
                         android:layout_height="50dp"
-                        android:layout_margin="10"
+                        android:layout_margintop="10"
+                        android:layout_marginLeft="10"
                         android:drawableRight="@drawable/ic_baseline_person_24"
                         android:text="User Full Name"
                         android:textSize="20"
